--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -16,7 +16,7 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 2.5rem;
+    gap: 1.5rem;
     width: 52rem;
     height: 39rem;
     background-color: #e3f1fc;
@@ -36,13 +36,13 @@ body {
     font-weight: bold;
 }
 
-.tarefas-form{
+.tarefas-form, .edicao-form{
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 0.5rem;
-    height: 10rem;
+    gap: 0.8rem;
+    height: 13rem;
 }
 
 input[name="descricao"]{
@@ -54,12 +54,42 @@ input[name="descricao"]{
     font-size: medium;
 }
 
+.erro-validacao {
+    color: red;
+    font-size: small;
+    font-weight: bold;
+}
+
 .adicionar-tarefa{
     /*background-color: red;*/
     display: flex;
     align-items: center;
     justify-content: center;
     width: 32rem;
+}
+
+.tarefa-detalhes{
+    display: flex;
+    justify-content: space-around;
+    width: 13rem;
+}
+
+.botao{
+    width: 6rem;
+    height: 2rem;
+    border-radius: 0.5rem;
+    box-shadow: 0 0.2rem 0.2rem rgba(0, 0, 0, 0.15);
+    border: none;
+    cursor: pointer;
+    color: white;
+}
+
+.adc{
+    background-color: #00c070;
+}
+
+.edt{
+    background-color: #00bf6f;
 }
 
 .tarefa{
@@ -91,11 +121,15 @@ input[name="descricao"]{
 }
 
 .greenbg{
-    background-color: #00ff00;
+    background-color: #16b216;
 }
 
 .redbg{
-    background-color: #ff0000;
+    background-color: #bf1f1f;
+}
+
+.yellowbg{
+    background-color: #d7d72d;
 }
 
 i {
@@ -103,6 +137,11 @@ i {
     color: #fff;
     align-self: center;
     justify-content: center;
+}
+
+.prioridade{
+    width: 6rem;
+    font-weight: bold;
 }
 
 .tarefas-container{
@@ -141,11 +180,21 @@ i {
     width: 15rem;
 }
 
-select, input[type = "date"]{
+#prioridade, input[type = "date"], select{
     height: 1.6rem;
+    width: 6rem;
     border-radius: 0.5rem;
-    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
+    box-shadow: 0 0.2rem 0.2rem rgba(0, 0, 0, 0.15);
     border: thin solid #1a1a1a;
+    align-self: center;
+}
+
+.data-conclusao {
+    height: 1.5rem;
+}
+
+#prioridade{
+    height: 1.7rem;
 }
 
 .tarefas-container::-webkit-scrollbar {
