--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -6,29 +6,52 @@
 body {
     font-family: Open Sans, serif;
     height: 100vh;
+    background-color: #838383;
     display: flex;
-    justify-content: center;
     align-items: center;
+    column-gap: 2rem;
 }
 
-.content-container {
+.menu-container{
+    display: flex;
+    flex-direction: column;
+    justify-self: left;
+    justify-content: space-around;
+    align-items: center;
+    background-color: #F2F2F2;
+    width: 16em;
+    height: 100vh;
+    border-radius: 0 1em 1em 0;
+}
+
+.imagem-usuário{
+    width: 10em;
+    height: 10em;
+    border-radius: 1em;
+}
+
+ul{
+    list-style: none;
+}
+
+.cards-container {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 1.5rem;
-    width: 52rem;
-    height: 39rem;
-    background-color: #e3f1fc;
-    border-radius: 0.5rem;
-    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
+    gap: 1.5em;
+    width: 101em;
+    height: 58em;
+    background-color: #F2F2F2;
+    border-radius: 0.5em;
+    box-shadow: 0 0.5em 1em rgba(0, 0, 0, 0.15);
 }
 
 .card {
-    width: 32rem;
+    width: 32em;
     background-color: #fff;
-    border-radius: 0.5rem;
-    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
+    border-radius: 0.5em;
+    box-shadow: 0 0.5em 1em rgba(0, 0, 0, 0.15);
 }
 
 .titulo {
@@ -41,16 +64,16 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 0.8rem;
-    height: 13rem;
+    gap: 0.8em;
+    height: 13em;
 }
 
 input[name="descricao"]{
-    width: 21rem;
-    height: 1rem;
-    border-radius: 0.5rem;
+    width: 21em;
+    height: 1em;
+    border-radius: 0.5em;
     border: 1px solid #ccc;
-    padding: 0.5rem;
+    padding: 0.5em;
     font-size: medium;
 }
 
@@ -65,20 +88,20 @@ input[name="descricao"]{
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 32rem;
+    width: 32em;
 }
 
 .tarefa-detalhes{
     display: flex;
     justify-content: space-around;
-    width: 13rem;
+    width: 13em;
 }
 
 .botao{
-    width: 6rem;
-    height: 2rem;
-    border-radius: 0.5rem;
-    box-shadow: 0 0.2rem 0.2rem rgba(0, 0, 0, 0.15);
+    width: 6em;
+    height: 2em;
+    border-radius: 0.5em;
+    box-shadow: 0 0.2em 0.2em rgba(0, 0, 0, 0.15);
     border: none;
     cursor: pointer;
     color: white;
@@ -94,29 +117,29 @@ input[name="descricao"]{
 
 .tarefa{
     list-style: none;
-    width: 23rem;
-    height: 3rem;
+    width: 23em;
+    height: 3em;
     display: flex;
     justify-content: space-between;
     align-items: center;
     background-color: #e3f1fc;
-    border-radius: 0.5rem;
-    margin: 0.5rem 0 0.5rem 0;
+    border-radius: 0.5em;
+    margin: 0.5em 0 0.5em 0;
 }
 
 .descricao{
-    margin-left: 1rem;
+    margin-left: 1em;
 }
 
 .round-button {
-    width: 1.6rem;
-    height: 1.6rem;
+    width: 1.6em;
+    height: 1.6em;
     border: thin;
     display: flex;
     align-items: center;
     justify-content: center;
-    border-radius: 0.5rem;
-    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
+    border-radius: 0.5em;
+    box-shadow: 0 0.5em 1em rgba(0, 0, 0, 0.15);
     cursor: pointer;
 }
 
@@ -140,24 +163,24 @@ i {
 }
 
 .prioridade{
-    width: 6rem;
+    width: 6em;
     font-weight: bold;
 }
 
 .tarefas-container{
-    height: 20rem;
+    height: 20em;
     overflow-y: scroll;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
-    margin-top: 1rem;
-    gap: 0.5rem;
+    margin-top: 1em;
+    gap: 0.5em;
 }
 
 
 .tarefas-titulo{
-    margin-top: 1rem;
+    margin-top: 1em;
 }
 
 .tarefas-space{
@@ -169,32 +192,32 @@ i {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    width: 10rem;
-    margin-right: 1rem;
+    width: 10em;
+    margin-right: 1em;
 }
 
 .botoes-redondos-container{
     display: flex;
     align-items: center;
     justify-content: space-evenly;
-    width: 15rem;
+    width: 15em;
 }
 
 #prioridade, input[type = "date"], select{
-    height: 1.6rem;
-    width: 6rem;
-    border-radius: 0.5rem;
-    box-shadow: 0 0.2rem 0.2rem rgba(0, 0, 0, 0.15);
+    height: 1.6em;
+    width: 6em;
+    border-radius: 0.5em;
+    box-shadow: 0 0.2em 0.2em rgba(0, 0, 0, 0.15);
     border: thin solid #1a1a1a;
     align-self: center;
 }
 
 .data-conclusao {
-    height: 1.5rem;
+    height: 1.5em;
 }
 
 #prioridade{
-    height: 1.7rem;
+    height: 1.7em;
 }
 
 .tarefas-container::-webkit-scrollbar {
