--- a/src/main/resources/templates/planejamento.html
+++ b/src/main/resources/templates/planejamento.html
@@ -6,7 +6,6 @@
         <link rel="stylesheet" th:href="@{css/menu-principal.css}">
         <link rel="stylesheet" th:href="@{css/card-container-home.css}">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
-
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
@@ -22,26 +21,22 @@
                         <ul class="navegacao-container">
                             <li>
                                 <button class="opcao-nav">
-                                    <i class="bi bi-house-fill black-fill icone-nav"></i>
-                                    <a class="name-link" href="/home">Home</a>
+                                    <i class="bi bi-house-fill black-fill icone-nav"></i><a class="name-link" href="/home">Home</a>
                                 </button>
                             </li>
                             <li>
                                 <button class="opcao-nav">
-                                    <i class="bi bi-calendar3-fill black-fill icone-nav pag-atual"></i>
-                                    <a class="name-link pag-atual" href="/calendario">Calendário</a>
+                                    <i class="bi bi-calendar3-fill black-fill icone-nav"></i> <a class="name-link" href="/calendario">Calendário</a>
                                 </button>
                             </li>
                             <li>
                                 <button class="opcao-nav">
-                                    <i class="bi bi-clipboard-data-fill black-fill icone-nav"></i>
-                                    <a class="name-link" href="/planejamento">Planejamento</a>
+                                    <i class="bi bi-clipboard-data-fill black-fill icone-nav pag-atual"></i> <a class="name-link pag-atual" href="/planejamento">Planejamento</a>
                                 </button>
                             </li>
                             <li>
                                 <button class="opcao-nav">
-                                    <i class="bi bi-clock-fill black-fill icone-nav"></i>
-                                    <a class="name-link" href="/historico"> Histórico</a>
+                                    <i class="bi bi-clock-fill black-fill icone-nav"></i><a class="name-link" href="/historico"> Histórico</a>
                                 </button>
                             </li>
                         </ul>
@@ -57,8 +52,6 @@
         <div class="cards-container">
 
         </div>
-        <!--Script para calendario-->
-        <script src='https://cdn.jsdelivr.net/npm/fullcalendar@6.1.10/index.global.min.js'></script>
-        <script th:src="@{js/calendario.js}"></script>
+
     </body>
 </html>
