--- a/src/main/resources/templates/historico.html
+++ b/src/main/resources/templates/historico.html
@@ -50,7 +50,7 @@
             </div>
         </div>
 
-        <div class="cards-container">
+        <div class="cards-container-background">
             <div class="busca-container card">
                 <i class="bi bi-file-earmark-fill"></i>
                 <input type="text" name="descricao-buscada" placeholder="Buscar tarefa por descrição">
