--- a/src/main/resources/templates/calendario.html
+++ b/src/main/resources/templates/calendario.html
@@ -3,9 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-with, initial-scale=1.0">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
+
         <link rel="stylesheet" th:href="@{css/menu-principal.css}">
         <link rel="stylesheet" th:href="@{css/card-container-home.css}">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
+        <link rel="stylesheet" th:href="@{css/calendario.css}">
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -54,10 +56,11 @@
                 </form>
             </div>
         </div>
-        <div class="cards-container">
-
+        <!--Calendário-->
+        <div class="cards-container-background">
+            <div id="calendario"></div>
         </div>
-        <!--Script para calendario-->
+        <!--Script para o calendário-->
         <script src='https://cdn.jsdelivr.net/npm/fullcalendar@6.1.10/index.global.min.js'></script>
         <script th:src="@{js/calendario.js}"></script>
     </body>
