--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -3,9 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
         <link rel="stylesheet" th:href="@{css/menu-principal.css}">
         <link rel="stylesheet" th:href="@{css/card-container-home.css}">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
+        <link rel="stylesheet" th:href="@{css/calendario.css}">
+
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
@@ -50,65 +52,69 @@
             </div>
         </div>
 
-        <div class="cards-container">
-            <div class="coluna1">
-                <!--Input para adição de tarefas-->
-                <form class="adicionar-container card" method="POST" th:action="@{/home}" th:object="${tarefa}">
-                    <h1 class="titulo">Adicionar tarefa</h1>
-                    <p class="erro-validacao" th:if="${#fields.hasErrors('descricao')}" th:errors="*{descricao}">Descrição é inválida.</p>
-                    <input name="descricao" type="text" th:field="*{descricao}" required>
-                    <div class="adicionar-tarefa">
-                        <div class="tarefa-detalhes">
-                            <label for="prioridade">Prioridade</label>
-                            <select th:field="${tarefa.prioridade}" name="prioridade">
-                                <option value="BAIXA">Baixa</option>
-                                <option value="MEDIA">Média</option>
-                                <option value="ALTA">Alta</option>
-                            </select>
-                            <div>
-                                <input class="data-conclusao" th:field="${tarefa.dataConclusao}" type="hidden" id="data-conclsao" name="dataConclusao">
-                                <label for="data-entrega">Data de entrega</label>
-                                <input class="data-conclusao" th:field="${tarefa.dataEntrega}" type="date" id="data-entrega"  name="dataEntrega">
-                            </div>
-                        </div>
-                        <br/>
-                    </div>
-                    <button class="botao adc" type="submit">Adicionar</button>
-                </form>
-                <!--Exibe as tarefas em aberto-->
-                <div class="tarefas-container card">
-                    <h1 class="tarefas-titulo">Tarefas em aberto</h1>
-                    <ul class="tarefas-space">
-                        <li class="tarefa" th:each="tarefa : ${listaDeTarefas}">
-                            <p class="descricao" th:text="${tarefa.descricao}">Tarefa placeholder.</p><br/>
-                            <div class="botoes-container">
-                                <div class="botoes-redondos-container">
-                                    <form th:method="PATCH" th:action="@{/home}">
-                                        <button class="round-button greenbg" type="submit"><i class="bi bi-check-circle-fill"></i></button>
-                                        <input type="hidden" name="id" th:value="${tarefa.id}" />
-                                        <input type="hidden" name="descricao" th:value="${tarefa.descricao}">
-                                    </form>
-                                    <form th:method="DELETE" th:action="@{/home}">
-                                        <button class="round-button redbg" type="submit"><i class="bi bi-trash-fill"></i></button>
-                                        <input type="hidden" name="id" th:value="${tarefa.id}" />
-                                    </form>
-                                    <form th:method="GET" th:action="@{/edicao}">
-                                        <button class="round-button yellowbg" type="submit"><i class="bi bi-pencil-fill"></i></button>
-                                        <input type="hidden" name="id" th:value="${tarefa.id}" />
-                                    </form>
+        <div class="cards-container-background">
+            <div class="colunas-cards-container">
+                <div class="coluna1">
+                    <!--Input para adição de tarefas-->
+                    <form class="adicionar-container card" method="POST" th:action="@{/home}" th:object="${tarefa}">
+                        <h1 class="titulo">Adicionar tarefa</h1>
+                        <p class="erro-validacao" th:if="${#fields.hasErrors('descricao')}" th:errors="*{descricao}">Descrição é inválida.</p>
+                        <input name="descricao" type="text" th:field="*{descricao}" required>
+                        <div class="adicionar-tarefa">
+                            <div class="tarefa-detalhes">
+                                <label for="prioridade">Prioridade</label>
+                                <select th:field="${tarefa.prioridade}" name="prioridade">
+                                    <option value="BAIXA">Baixa</option>
+                                    <option value="MEDIA">Média</option>
+                                    <option value="ALTA">Alta</option>
+                                </select>
+                                <div>
+                                    <input class="data-conclusao" th:field="${tarefa.dataConclusao}" type="hidden" id="data-conclsao" name="dataConclusao">
+                                    <label for="data-entrega">Data de entrega</label>
+                                    <input class="data-conclusao" th:field="${tarefa.dataEntrega}" type="date" id="data-entrega"  name="dataEntrega">
                                 </div>
-                                <p class="prioridade" th:text="${tarefa.prioridade}"></p>
                             </div>
-                        </li>
-                    </ul>
+                            <br/>
+                        </div>
+                        <button class="botao adc" type="submit">Adicionar</button>
+                    </form>
+                    <!--Exibe as tarefas em aberto-->
+                    <div class="tarefas-container card">
+                        <h1 class="tarefas-titulo">Tarefas em aberto</h1>
+                        <ul class="tarefas-space">
+                            <li class="tarefa" th:each="tarefa : ${listaDeTarefas}">
+                                <p class="descricao" th:text="${tarefa.descricao}">Tarefa placeholder.</p><br/>
+                                <div class="botoes-container">
+                                    <div class="botoes-redondos-container">
+                                        <form th:method="PATCH" th:action="@{/home}">
+                                            <button class="round-button greenbg" type="submit"><i class="bi bi-check-circle-fill"></i></button>
+                                            <input type="hidden" name="id" th:value="${tarefa.id}" />
+                                            <input type="hidden" name="descricao" th:value="${tarefa.descricao}">
+                                        </form>
+                                        <form th:method="DELETE" th:action="@{/home}">
+                                            <button class="round-button redbg" type="submit"><i class="bi bi-trash-fill"></i></button>
+                                            <input type="hidden" name="id" th:value="${tarefa.id}" />
+                                        </form>
+                                        <form th:method="GET" th:action="@{/edicao}">
+                                            <button class="round-button yellowbg" type="submit"><i class="bi bi-pencil-fill"></i></button>
+                                            <input type="hidden" name="id" th:value="${tarefa.id}" />
+                                        </form>
+                                    </div>
+                                    <p class="prioridade" th:text="${tarefa.prioridade}"></p>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
-            </div>
-            <div class="coluna2">
-                <!--Card de calendario-->
-                <div class="calendario-container card" id="calendario"></div>
-                <!--Card de estatistica-->
-                <div class="estatistica-conclusao-container card">
-                    <p>Card de estatística de conclusão</p>
+                <div class="coluna2">
+                    <!--Card de calendario-->
+                    <div class="calendario-container card">
+                        <div id="calendario"></div>
+                    </div>
+                    <!--Card de estatistica-->
+                    <div class="estatistica-conclusao-container card">
+                        <p>Card de estatística de conclusão</p>
+                    </div>
                 </div>
             </div>
         </div>
