--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -57,28 +57,31 @@
             <div class="colunas-cards-container">
                 <div class="coluna1">
                     <!--Input para adição de tarefas-->
-                    <form class="adicionar-container card" method="POST" th:action="@{/home}" th:object="${tarefa}">
-                        <h1 class="titulo">Adicionar tarefa</h1>
-                        <p class="erro-validacao" th:if="${#fields.hasErrors('descricao')}" th:errors="*{descricao}">Descrição é inválida.</p>
-                        <input name="descricao" type="text" th:field="*{descricao}" required>
-                        <div class="adicionar-tarefa">
-                            <div class="tarefa-detalhes">
-                                <label for="prioridade">Prioridade</label>
-                                <select th:field="${tarefa.prioridade}" name="prioridade">
-                                    <option value="BAIXA">Baixa</option>
-                                    <option value="MEDIA">Média</option>
-                                    <option value="ALTA">Alta</option>
-                                </select>
-                                <div>
-                                    <input class="data-conclusao" th:field="${tarefa.dataConclusao}" type="hidden" id="data-conclsao" name="dataConclusao">
-                                    <label for="data-entrega">Data de entrega</label>
+                    <form class="adicionar-card card" method="POST" th:action="@{/home}" th:object="${tarefa}">
+                        <div class="adicionar-container">
+                            <h1 class="titulo">Adicionar tarefa</h1>
+                            <p class="erro-validacao" th:if="${#fields.hasErrors('descricao')}" th:errors="*{descricao}">Descrição é inválida.</p>
+                            <input class="descricao-input" name="descricao" type="text" th:field="*{descricao}" placeholder="Título da tarefa" required>
+                            <div class="adicionar-tarefa">
+                                <div class="prioridade-container">
+                                    <label for="prioridade">Prioridade: </label>
+                                    <select class="select-box" th:field="${tarefa.prioridade}" name="prioridade">
+                                        <option value="BAIXA">Baixa</option>
+                                        <option value="MEDIA">Média</option>
+                                        <option value="ALTA">Alta</option>
+                                    </select>
+                                </div>
+                                <div class="prazo-container">
+                                    <label for="data-entrega">Prazo: </label>
                                     <input class="data-conclusao" th:field="${tarefa.dataEntrega}" type="date" id="data-entrega"  name="dataEntrega">
                                 </div>
+                                <input class="data-conclusao" th:field="${tarefa.dataConclusao}" type="hidden" id="data-conclsao" name="dataConclusao">
                             </div>
-                            <br/>
+                            <button class="botao adc" type="submit">Adicionar</button>
                         </div>
-                        <button class="botao adc" type="submit">Adicionar</button>
                     </form>
+
+
                     <!--Exibe as tarefas em aberto-->
                     <div class="tarefas-container card">
                         <h1 class="tarefas-titulo">Tarefas em aberto</h1>
@@ -122,5 +125,6 @@
         <!--Scripts-->
         <!-- FullCalendar core package -->
         <script src="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.10/index.global.min.js"></script>
+
     </body>
 </html>
