--- a/src/main/resources/templates/planejamento.html
+++ b/src/main/resources/templates/planejamento.html
@@ -14,52 +14,16 @@
         <title>Do it, now!</title>
     </head>
     <body>
-        <div class="menu-container">
-            <div class="container-logo-imagem">
-                <svg class="logo"></svg>
-                <div class="container-imagem-navegacao">
-                    <span class="imagem-usuario"></span>
-                    <nav>
-                        <ul class="navegacao-container">
-                            <li>
-                                <button class="opcao-nav">
-                                    <i class="bi bi-house-fill black-fill icone-nav"></i><a class="name-link" href="/home">Home</a>
-                                </button>
-                            </li>
-                            <li>
-                                <button class="opcao-nav">
-                                    <i class="bi bi-clipboard-data-fill black-fill icone-nav pag-atual"></i> <a class="name-link pag-atual" href="/planejamento">Planejamento</a>
-                                </button>
-                            </li>
-                            <li>
-                                <button class="opcao-nav">
-                                    <i class="bi bi-calendar3-fill black-fill icone-nav"></i> <a class="name-link" href="/calendario">Calendário</a>
-                                </button>
-                            </li>
-                            <li>
-                                <button class="opcao-nav">
-                                    <i class="bi bi-clock-fill black-fill icone-nav"></i><a class="name-link" href="/historico">Histórico</a>
-                                </button>
-                            </li>
-                        </ul>
-                    </nav>
-                </div>
-            </div>
-            <div>
-                <form class="log-out-container">
-                    <i class="bi bi-door-open-fill black-fill icone-nav"></i><input class="log-out-opcao opcao-nav name-link" type="submit" value="Log out" />
-                </form>
-            </div>
-        </div>
+        <div th:replace="~{home :: menu}"></div>
         <div class="cards-container-background">
-            <form class="evento-form" th:action="@{/evento}" th:object="${eventoDto}">
-                <input th:field="${eventoDto.titulo}" type="text" placeholder="Título">
-                <textarea th:field="${eventoDto.descricao}" placeholder="Descrição"></textarea>
-                <input th:field="${eventoDto.diaTodo}" id="dia-todo" type="checkbox" placeholder="Data">
+            <form class="evento-form" method="POST" th:action="@{/evento}" th:object="${evento}">
+                <input th:field="${evento.titulo}" type="text" placeholder="Título">
+                <textarea th:field="${evento.descricao}" placeholder="Descrição"></textarea>
+                <input th:field="${evento.diaTodo}" id="dia-todo" type="checkbox" placeholder="Data">
                 <label for="dia-todo">Dia todo</label>
-                <input th:field="${eventoDto.dataInicio}" id="data-inicio" type="date"><input th:field="${eventoDto.horaInicio}" id="hora inicio" type="time">
-                <input th:field="${eventoDto.dataFim}" id="data-final" type="date"><input th:field="${eventoDto.horaFim}" id="hora final" type="time">
-                <input th:field="${eventoDto.corDeBackground}" id="cor-background" type="color">
+                <input th:field="${evento.dataInicio}" id="data-inicio" type="date"><input th:field="${evento.horaInicio}" id="hora inicio" type="time">
+                <input th:field="${evento.dataFim}" id="data-final" type="date"><input th:field="${evento.horaFim}" id="hora final" type="time">
+                <input th:field="${evento.corDeBackground}" id="cor-background" type="color">
                 <button type="submit">Adicionar</button>
             </form>
             <div id="calendario-planejamento"></div>
