Mapper testado e funcionando... Eventos salvos na DataBase com sucesso

--- a/src/main/resources/templates/planejamento.html
+++ b/src/main/resources/templates/planejamento.html
@@ -22,7 +22,7 @@
                 <input th:field="${evento.diaTodo}" id="dia-todo" type="checkbox" placeholder="Data">
                 <label for="dia-todo">Dia todo</label>
                 <input th:field="${evento.dataInicio}" id="data-inicio" type="date"><input th:field="${evento.horaInicio}" id="hora inicio" type="time">
-                <input th:field="${evento.dataFim}" id="data-final" type="date"><input th:field="${evento.horaFim}" id="hora final" type="time">
+                <input th:field="${evento.dataFinal}" id="data-final" type="date"><input th:field="${evento.horaFinal}" id="hora final" type="time">
                 <input th:field="${evento.corDeBackground}" id="cor-background" type="color">
                 <button type="submit">Adicionar</button>
             </form>
