--- a/src/main/resources/templates/historico.html
+++ b/src/main/resources/templates/historico.html
@@ -3,8 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-with, initial-scale=1.0">
-        <link rel="stylesheet" th:href="@{css/menu-principal.css}">
-        <link rel="stylesheet" th:href="@{css/card-container-home.css}">
+        <link rel="stylesheet" th:href="@{css/style.css}">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
