--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -4,104 +4,121 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
-        <link rel="stylesheet" th:href="@{css/menu-principal.css}">
-        <link rel="stylesheet" th:href="@{css/card-container-home.css}">
-        <link rel="stylesheet" th:href="@{css/calendario.css}">
-
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+        <link rel="stylesheet" th:href="@{css/estilos-base.css}">
+        <link rel="stylesheet" th:href="@{css/menu.css}">
+        <link rel="stylesheet" th:href="@{css/background-card.css}">
+        <link rel="stylesheet" th:href="@{css/cards-da-home.css}">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Inika&display=swap" rel="stylesheet">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
         <title>Do it, now!</title>
     </head>
     <body>
-        <div th:fragment="menu" class="menu-container">
-            <div class="container-logo-imagem">
-                <svg class="logo"></svg>
-                <div class="container-imagem-navegacao">
-                    <span class="imagem-usuario"></span>
-                    <nav>
-                        <ul class="navegacao-container">
-                            <li>
-                                <button class="opcao-nav">
-                                    <i class="bi bi-house-fill black-fill icone-nav"></i><a class="name-link" href="/home">Home</a>
-                                </button>
-                            </li>
-                            <li>
-                                <button class="opcao-nav">
-                                    <i class="bi bi-clipboard-data-fill black-fill icone-nav"></i> <a class="name-link" href="/evento">Planejamento</a>
-                                </button>
-                            </li>
-                            <li>
-                                <button class="opcao-nav">
-                                    <i class="bi bi-calendar3-fill black-fill icone-nav"></i> <a class="name-link" href="/calendario">Calendário</a>
-                                </button>
-                            </li>
+        <div th:fragment="menu" class="menu-lateral">
+            <!-- Menu superior -->
+            <div class="menu-superior-container">
+                <svg id="logo" th:src="@{svg/logo-1.svg}"></svg>
+                <img alt="Imagem do usuário"  class="imagem-usuario drop-shadow"/>
+                <nav>
+                    <ul class="navegacao-container">
+                        <li>
+                            <button class="opcao-nav">
+                                <i class="bi bi-house-fill black-fill"></i><a class="name-link" href="/home">Home</a>
+                            </button>
+                        </li>
+                        <li>
+                            <button class="opcao-nav">
+                                <i class="bi bi-clipboard-data-fill black-fill"></i><a class="name-link" href="/evento">Planejamento</a>
+                            </button>
+                        </li>
+                        <li>
+                            <button class="opcao-nav">
+                                <i class="bi bi-calendar3-fill black-fill"></i> <a class="name-link" href="/calendario">Calendário</a>
+                            </button>
+                        </li>
+                        <li>
+                            <button class="opcao-nav">
+                                <i class="bi bi-clock-fill black-fill "></i><a class="name-link" href="/historico"> Histórico</a>
+                            </button>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
 
-                            <li>
-                                <button class="opcao-nav">
-                                    <i class="bi bi-clock-fill black-fill icone-nav"></i><a class="name-link" href="/historico"> Histórico</a>
-                                </button>
-                            </li>
-                        </ul>
-                    </nav>
-                </div>
-            </div>
-            <div>
-                <form class="log-out-container">
-                    <i class="bi bi-door-open-fill black-fill icone-nav"></i><input class="log-out-opcao opcao-nav name-link" type="submit" value="Log out" />
-                </form>
-            </div>
+            <!-- Botão de logout -->
+            <form class="log-out-container">
+                <i class="bi bi-door-open-fill black-fill"></i><input class="name-link" type="submit" value="Log out" />
+            </form>
         </div>
-        <div class="cards-container-background">
-            <div class="colunas-cards-container">
-                <div class="coluna1">
-                    <!--Input para adição de tarefas-->
-                    <form class="adicionar-card card" method="POST" th:action="@{/home}" th:object="${tarefa}">
-                        <div class="adicionar-container">
+        <div class="background-card">
+            <div class="coluna">
+                <form class="card adiciona-tarefa-background-card" method="POST" th:action="@{/home}" th:object="${tarefa}">
+                    <div class="adiciona-tarefa-content-container">
+                        <div class="titulo-input-container">
                             <h1 class="titulo">Adicionar tarefa</h1>
                             <p class="erro-validacao" th:if="${#fields.hasErrors('descricao')}" th:errors="*{descricao}">Descrição é inválida.</p>
-                            <input class="descricao-input" name="descricao" type="text" th:field="*{descricao}" placeholder="Título da tarefa" required>
-                            <div class="adicionar-tarefa">
-                                <div class="prioridade-container">
-                                    <label for="prioridade">Prioridade: </label>
+                            <input class="descricao-input" name="descricao" type="text" th:field="*{descricao}"
+                                   placeholder="Título da tarefa" required>
+                        </div>
+                        <div class="detalhes-botao-container">
+                            <div class="detalhes-container">
+                                <!--Prioridade-->
+                                <div class="detalhes">
+                                    <label class="detalhes-titulo" for="prioridade">Prioridade: </label>
                                     <select class="select-box" th:field="${tarefa.prioridade}" name="prioridade">
                                         <option value="BAIXA">Baixa</option>
                                         <option value="MEDIA">Média</option>
                                         <option value="ALTA">Alta</option>
                                     </select>
                                 </div>
-                                <div class="prazo-container">
-                                    <label for="data-entrega">Prazo: </label>
+                                <!--Data de entrega-->
+                                <div class="detalhes">
+                                    <label class="detalhes-titulo" for="data-entrega">Prazo: </label>
                                     <input class="data-conclusao" th:field="${tarefa.dataEntrega}" type="date" id="data-entrega"  name="dataEntrega">
+                                    <input class="data-conclusao" th:field="${tarefa.dataConclusao}" type="hidden" id="data-conclsao" name="dataConclusao">
                                 </div>
-                                <input class="data-conclusao" th:field="${tarefa.dataConclusao}" type="hidden" id="data-conclsao" name="dataConclusao">
                             </div>
-                            <button class="botao adc" type="submit">Adicionar</button>
+                            <div class="botoes-tarefa-container">
+                                <button title="Adicionar" class="botao-tarefa" type="submit"><i class="bi bi-plus-square-fill"></i></button>
+                                <button title="Descartar" class="botao-tarefa" type="submit"><i class="bi bi-x-square-fill"></i></button>
+                            </div>
                         </div>
-                    </form>
-
-
-                    <!--Exibe as tarefas em aberto-->
+                    </div>
+                </form>
+                    <!--Tarefas em aberto-->
                     <div class="tarefas-container card">
                         <h1 class="tarefas-titulo">Tarefas em aberto</h1>
                         <ul class="tarefas-space">
                             <li class="tarefa" th:each="tarefa : ${listaDeTarefas}">
-                                <p class="descricao" th:text="${tarefa.descricao}">Tarefa placeholder.</p><br/>
+                                <p class="descricao" th:text="${tarefa.descricao}">Descrição</p><br/>
                                 <div class="botoes-container">
                                     <div class="botoes-redondos-container">
+                                        <!--Botão de conclusão-->
                                         <form th:method="PATCH" th:action="@{/home}">
-                                            <button class="round-button greenbg" type="submit"><i class="bi bi-check-circle-fill"></i></button>
+                                            <button class="round-button greenbg" type="submit">
+                                                <i class="bi bi-check-circle-fill"></i>
+                                            </button>
                                             <input type="hidden" name="id" th:value="${tarefa.id}" />
                                             <input type="hidden" name="descricao" th:value="${tarefa.descricao}">
                                         </form>
+                                        <!--Botão de exclusão-->
                                         <form th:method="DELETE" th:action="@{/home}">
-                                            <button class="round-button redbg" type="submit"><i class="bi bi-trash-fill"></i></button>
+                                            <button class="round-button redbg" type="submit">
+                                                <i class="bi bi-trash-fill"></i>
+                                            </button>
                                             <input type="hidden" name="id" th:value="${tarefa.id}" />
                                         </form>
-                                        <form th:method="GET" th:action="@{/edicao}">
-                                            <button class="round-button yellowbg" type="submit"><i class="bi bi-pencil-fill"></i></button>
-                                            <input type="hidden" name="id" th:value="${tarefa.id}" />
-                                        </form>
+                                        <!--Botão que aciona o modal de edição-->
+                                        <button class="round-button yellowbg" type="button" data-bs-toggle="modal" data-bs-target="#modalEdicao">
+                                            <i class="bi bi-pencil-fill"></i>
+                                        </button>
                                     </div>
                                     <p class="prioridade" th:text="${tarefa.prioridade}"></p>
                                 </div>
@@ -109,21 +126,29 @@
                         </ul>
                     </div>
                 </div>
-                <div class="coluna2">
-                    <!--Card de calendario-->
-                    <div class="calendario-container card">
-                        <div id="calendario"></div>
-                    </div>
-                    <!--Card de estatistica-->
-                    <div class="estatistica-conclusao-container card">
-                        <p>Card de estatística de conclusão</p>
+
+                <!-- Modal de edicao -->
+                <div class="modal fade" id="modalEdicao" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body">
+
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                <button type="button" class="btn btn-primary">Save changes</button>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-        <!--Scripts-->
         <!-- FullCalendar core package -->
         <script src="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.10/index.global.min.js"></script>
-
-    </body>
+        <!-- Bootstrap core package -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+       </body>
 </html>
