--- a/src/main/resources/templates/planejamento.html
+++ b/src/main/resources/templates/planejamento.html
@@ -3,9 +3,6 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-with, initial-scale=1.0">
-        <link rel="stylesheet" th:href="@{css/menu-principal.css}">
-        <link rel="stylesheet" th:href="@{css/card-container-home.css}">
-        <link rel="stylesheet" th:href="@{css/calendario-planejamento.css}">
 
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -15,6 +12,7 @@
     </head>
     <body>
         <div th:replace="~{home :: menu}"></div>
+
         <div class="cards-container-background">
             <form class="evento-form" method="POST" th:action="@{/evento}" th:object="${evento}">
                 <input th:field="${evento.titulo}" type="text" placeholder="Título">
@@ -29,6 +27,7 @@
             <div id="calendario-planejamento"></div>
         </div>
         <script src="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.10/index.global.min.js"></script>
+        <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
         <script th:src="@{js/calendario-planejamento.js}"></script>
     </body>
 </html>
